[project]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = [
    {name = "AR"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
cognite-toolkit = "0.5.30"
